# vyatta-wirelessmodem

./: .frlog  .gitignore  .merge-branch-exclude  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules
scripts/: rename-wirelessmodem  wirelessmodem.down  wirelessmodem.up
templates-cfg/interfaces/wirelessmodem/: node.def
templates-cfg/interfaces/wirelessmodem/node.tag/backup/: node.def
templates-cfg/interfaces/wirelessmodem/node.tag/backup/distance/: node.def
templates-cfg/interfaces/wirelessmodem/node.tag/description/: node.def
templates-cfg/interfaces/wirelessmodem/node.tag/device/: node.def
templates-cfg/interfaces/wirelessmodem/node.tag/disable-link-detect/: node.def
templates-cfg/interfaces/wirelessmodem/node.tag/firewall/in/name/: node.def
templates-cfg/interfaces/wirelessmodem/node.tag/mtu/: node.def
templates-cfg/interfaces/wirelessmodem/node.tag/network/: node.def
templates-cfg/interfaces/wirelessmodem/node.tag/no-dns/: node.def
templates-cfg/interfaces/wirelessmodem/node.tag/ondemand/: node.def
templates-op/clear/interfaces/wirelessmodem/: node.def
templates-op/clear/interfaces/wirelessmodem/node.tag/: node.def
templates-op/clear/interfaces/wirelessmodem/node.tag/session/: node.def
templates-op/show/interfaces/wirelessmodem/: node.def
templates-op/show/interfaces/wirelessmodem/node.tag/: node.def
templates-op/show/interfaces/wirelessmodem/node.tag/debug/: node.def
templates-op/show/interfaces/wirelessmodem/node.tag/statistics/: node.def
templates-op/show/interfaces/wirelessmodem/node.tag/stats/: node.def
(+1 files in other folders)
